Fixed formattign and deprecated apis